--- a/STMS/Simple.TaskManagement.Client.Net/MainWindow.xaml
+++ b/STMS/Simple.TaskManagement.Client.Net/MainWindow.xaml
@@ -26,7 +26,7 @@
                 <Run Text="Search bar:"/>
             </Label>
             <Border Grid.Column="1" BorderBrush="Red" BorderThickness="0.1" Margin="8,0,0,0">
-                <TextBox  Text="{Binding InputTerm.Value, UpdateSourceTrigger=PropertyChanged}" />
+                <TextBox  Text="{Binding TextSearch.InputTerm.Value, UpdateSourceTrigger=PropertyChanged}" />
             </Border>
             <Border Grid.Column="2">
                 <Button Content=" -> " Command="{Binding Start}"/>
