--- a/STMS/Simple.TaskManagement.Client.Net/MainWindow.xaml
+++ b/STMS/Simple.TaskManagement.Client.Net/MainWindow.xaml
@@ -38,13 +38,14 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="5"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="5"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
 
-
-            <Grid  x:Name="_TASK_LIST_AREA">
-                <ListView  x:Name="_TASK_LIST" HorizontalContentAlignment="Stretch" ItemsSource="{Binding TaskList.Tasks.Value}">
+            <Grid  x:Name="_NEW_LIST_AREA">
+                <ListView  x:Name="_NEW_TASK_LIST" HorizontalContentAlignment="Stretch" ItemsSource="{Binding TaskList.Tasks.Value}">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <Expander Header="{Binding TaskDescription}">
@@ -74,7 +75,39 @@
 
             <GridSplitter x:Name="gridSplitter1" Grid.Row="1" Width="21" Height="5"  Background="#FF03A9F4" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" />
 
-            <Grid Grid.Row="2" x:Name="_TASK_SERACH_RESULT_AREA">
+
+            <Grid  x:Name="_TASK_LIST_AREA" Grid.Row="2">
+                <ListView  x:Name="_TASK_LIST" HorizontalContentAlignment="Stretch" ItemsSource="{Binding TaskList.Tasks.Value}">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <Expander Header="{Binding TaskDescription}">
+                                <ListView 
+                                HorizontalContentAlignment="Stretch"
+                                ItemsSource="{Binding Comments}">
+                                    <ListView.ItemTemplate>
+                                        <DataTemplate>
+                                            <Grid>
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="Auto"/>
+                                                    <ColumnDefinition Width="*"/>
+                                                    <ColumnDefinition Width="Auto"/>
+                                                </Grid.ColumnDefinitions>
+                                                <TextBlock Text="{Binding Key}" Margin="8 0 8 0"/>
+                                                <TextBlock Grid.Column="1" Text="{Binding Value.Commentary}" Padding="4 0 4 0"/>
+                                                <TextBlock Grid.Column="2" Text="{Binding Value.ReminderDate}" />
+                                            </Grid>
+                                        </DataTemplate>
+                                    </ListView.ItemTemplate>
+                                </ListView>
+                            </Expander>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </Grid>
+
+            <GridSplitter x:Name="gridSplitter2" Grid.Row="3" Width="21" Height="5"  Background="#FF03A9F4" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" />
+
+            <Grid Grid.Row="4" x:Name="_TASK_SERACH_RESULT_AREA">
                 <ListView x:Name="_TASK_SERACH_RESULT_LIST" 
                           HorizontalContentAlignment="Stretch" 
                           SelectedValue="{Binding SearchResult.SelectedItem.Value}"
