fixed: text search command wire-up

--- a/STMS/Simple.TaskManagement.Client.Net/MainWindow.xaml
+++ b/STMS/Simple.TaskManagement.Client.Net/MainWindow.xaml
@@ -31,7 +31,7 @@
                 <TextBox  Text="{Binding TextSearch.InputTerm.Value, UpdateSourceTrigger=PropertyChanged}" />
             </Border>
             <Border Grid.Column="2">
-                <Button Content=" -> " Command="{Binding Start}"/>
+                <Button Content=" -> " Command="{Binding TextSearch.Start}"/>
             </Border>
         </Grid>
         <Grid
