--- a/STMS/Simple.TaskManagement.Client.Net/MainWindow.xaml
+++ b/STMS/Simple.TaskManagement.Client.Net/MainWindow.xaml
@@ -173,43 +173,125 @@
                         <TabItem.Header>
                             <TextBlock Text="EDIT TASK" />
                         </TabItem.Header>
-                        <Grid  x:Name="_NEW_LIST_AREA">
-                            <ListView  x:Name="_NEW_TASK_LIST" HorizontalContentAlignment="Stretch" ItemsSource="{Binding Factory.Next.Value}">
-                                <ListView.Resources>
-                                    <DataTemplate DataType="{x:Type domain:NextTaskManagerViewModel}">
-                                        <Grid>
-                                            <Border Name="border" BorderBrush="Navy" BorderThickness="1" Padding="5" Margin="5">
-                                                <Grid>
-                                                    <Grid.RowDefinitions>
-                                                        <RowDefinition/>
-                                                        <RowDefinition/>
-                                                        <RowDefinition/>
-                                                        <RowDefinition/>
-                                                        <RowDefinition/>
-                                                    </Grid.RowDefinitions>
-                                                    <Grid.ColumnDefinitions>
-                                                        <ColumnDefinition />
-                                                        <ColumnDefinition />
-                                                    </Grid.ColumnDefinitions>
-                                                    <TextBlock Grid.Row="0" Grid.Column="0" Text="Task Name:"/>
-                                                    <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Current.Value.TaskId}" />
-                                                    <TextBlock Grid.Row="1" Grid.Column="0" Text="Description:"/>
-                                                    <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding Current.Value.TaskDescription}"/>
-                                                    <TextBlock Grid.Row="2" Grid.Column="0" Text="Task Type:"/>
-                                                    <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding Current.Value.TaskType}"/>
-                                                    <Grid Grid.Row="4" Grid.ColumnSpan="2">
-                                                        <StackPanel Orientation="Horizontal" FlowDirection="RightToLeft">
-                                                            <Button Content="Save"   Command="{Binding SaveAsyncCommand}"    />
-                                                            <Button Content="Cancel" Command="{Binding CancelAsyncCommand}"   />
-                                                        </StackPanel>
-                                                    </Grid>
-                                                </Grid>
-                                            </Border>
-                                        </Grid>
-                                    </DataTemplate>
-                                </ListView.Resources>
-                            </ListView>
+                        <!--#region  Edit task -->
+
+                        <Grid x:Name="_EDIT_TASK_AREA">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+                            
+                            <!--#region Task Header -->
+                            <Expander Header="TASK TO EDIT">
+                                <Grid Width="300" Margin="8,8,8,8">
+                                    <Grid.Resources>
+                                        <Style TargetType="CheckBox" BasedOn="{StaticResource MaterialDesignCheckBox}">
+                                            <Setter Property="Margin" Value="8,8,10,8"/>
+                                        </Style>
+                                        <Style TargetType="TextBox" BasedOn="{StaticResource MaterialDesignTextBox}">
+                                            <Setter Property="materialDesign:HintAssist.IsFloating" Value="True"/>
+                                            <Setter Property="Margin" Value="8,8,8,8"/>
+                                        </Style>
+                                    </Grid.Resources>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="*"/>
+                                        <RowDefinition Height="*"/>
+                                        <RowDefinition Height="*"/>
+                                        <RowDefinition Height="*"/>
+                                        <RowDefinition Height="*" />
+                                    </Grid.RowDefinitions>
+                                    <TextBlock Grid.Column="0" Grid.Row="0" Style="{StaticResource MaterialDesignTitleTextBlock}" Margin="8,8,8,16">OPTIONS</TextBlock>
+                                    <TextBox Grid.Column="0" Grid.Row="1" materialDesign:HintAssist.Hint="Setting 1" Text="200"/>
+                                    <TextBox Grid.Column="0" Grid.Row="2" materialDesign:HintAssist.Hint="Setting 2" Text="400"/>
+                                    <TextBox Grid.Column="0" Grid.Row="3" materialDesign:HintAssist.Hint="Setting 3" Text="600"/>
+                                    <CheckBox Grid.Column="1" Grid.Row="1" VerticalAlignment="Bottom" />
+                                    <CheckBox Grid.Column="1" Grid.Row="2" IsChecked="True" VerticalAlignment="Bottom" />
+                                    <CheckBox Grid.Column="1" Grid.Row="3" VerticalAlignment="Bottom" />
+                                    <ComboBox Grid.Column="0" Grid.Row="4" materialDesign:HintAssist.Hint="Setting 4" materialDesign:HintAssist.IsFloating="True"
+                                  MaxDropDownHeight="200"
+                                  Margin="8 8 8 8">
+                                        <ComboBoxItem>25%</ComboBoxItem>
+                                        <ComboBoxItem>50%</ComboBoxItem>
+                                        <ComboBoxItem>75%</ComboBoxItem>
+                                        <ComboBoxItem>100%</ComboBoxItem>
+                                        <ComboBoxItem>150%</ComboBoxItem>
+                                        <ComboBoxItem>200%</ComboBoxItem>
+                                        <ComboBoxItem>250%</ComboBoxItem>
+                                        <ComboBoxItem>501%</ComboBoxItem>
+                                    </ComboBox>
+                                </Grid>
+                            </Expander>
+
+
+                            <!--#endregion-->
+                            
+                            <!--#region SAMPLE 1-->                            
+                            <materialDesign:DialogHost
+                                Grid.Column="0" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                                <materialDesign:DialogHost.DialogContent>
+                                    <StackPanel Margin="16">
+                                        <TextBlock>Add new message.</TextBlock>
+                                        <TextBox Margin="0 8 0 0" HorizontalAlignment="Stretch" x:Name="FruitTextBox" />
+                                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" >
+                                            <Button Style="{StaticResource MaterialDesignFlatButton}"
+                                                    IsDefault="True"
+                                                    Margin="0 8 8 0"
+                                                    Command="materialDesign:DialogHost.CloseDialogCommand">
+                                                    <Button.CommandParameter>
+                                                        <system:Boolean>True</system:Boolean>
+                                                    </Button.CommandParameter>
+                                                 ACCEPT
+                                            </Button>
+                                            <Button Style="{StaticResource MaterialDesignFlatButton}"
+                                                    IsCancel="True"
+                                                    Margin="0 8 8 0"
+                                                    Command="materialDesign:DialogHost.CloseDialogCommand">
+                                                    <Button.CommandParameter>
+                                                        <system:Boolean>False</system:Boolean>
+                                                    </Button.CommandParameter>
+                                                CANCEL
+                                            </Button>
+                                        </StackPanel>
+                                    </StackPanel>
+                                </materialDesign:DialogHost.DialogContent>
+                                <Border BorderThickness="1" BorderBrush="{DynamicResource PrimaryHueMidBrush}"
+                                    MinWidth="256" MinHeight="256" ClipToBounds="True">
+                                    <Grid>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="Auto" />
+                                            <RowDefinition Height="*" />
+                                            <RowDefinition Height="Auto" />
+                                        </Grid.RowDefinitions>
+                                        <TextBlock Text="COMMENTS" />
+                                        <ListBox x:Name="CommentsListBox" Grid.Row="1">
+                                            <ListBoxItem>Boy to eat Apple</ListBoxItem>
+                                            <ListBoxItem>Girl to eat Banana</ListBoxItem>
+                                            <ListBoxItem>Daddy to buy Pear</ListBoxItem>
+                                        </ListBox>
+                                        <materialDesign:ColorZone Mode="PrimaryMid" Grid.Row="2" Effect="{DynamicResource MaterialDesignShadowDepth5}">
+                                            <TextBlock Margin="16">Task editor footer</TextBlock>
+                                        </materialDesign:ColorZone>
+                                        <Button Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}"                                
+                                                Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}"
+                                                VerticalAlignment="Bottom" HorizontalAlignment="Right" 
+                                                Grid.Row="1" Margin="0 0 28 -20">
+                                            <Viewbox Width="22" Height="22">
+                                                <Canvas Width="24" Height="24">
+                                                    <Path Data="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" Fill="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=Button}, Path=Foreground}" />
+                                                </Canvas>
+                                            </Viewbox>
+                                        </Button>
+                                    </Grid>
+                                </Border>
+                            </materialDesign:DialogHost>
+                            <!--#endregion -->
                         </Grid>
+                        
+                        <!--#endregion-->
                     </TabItem>
                     
                     <TabItem x:Name="_COOL_FEATURE_TAB_ITEM">
